# itop-miniLinux-lab

./: .gitignore  README
01-helloworld/: Makefile  hello.c
02-open/: Makefile  open.c
03-marg/: CMakeLists.txt  marg.c
03-marg/config/: margConfig.h.in
04-leds/: CMakeLists.txt  leds.c
04-leds/config/: ledsConfig.h.in
05-buzzer/: CMakeLists.txt  buzzer.c
05-buzzer/config/: buzzerConfig.h.in
06-ADC/: CMakeLists.txt  adc.c
07-uart-get/: CMakeLists.txt  uart.c
07-uart-get/config/: uartConfig.h.in
07-uart-out/: uart.c
